<resources>
    <string name="app_name">RUN:RAN:DOM</string>
    <string name="add_run">ADD RUN</string>
    <string name="show_run">RUN DETAIL</string>
    <string name="challenges">CHALLENGES</string>
    <string name="challenge_select">SELECT CHALLENGE TYPE</string>
    <string name="challenge_select_title">CHOOSE YOUR PAIN:</string>
    <string name="points">CHALLENGE POINTS: </string>
    <string name="challenge_accepted">CHALLENGE ACCEPTED!</string>
    <string name="challenge_declined">CHALLENGE REJECTED!</string>
    <string name="all_runs">RUN LOG</string>
    <string name="edit_run">EDIT RUN</string>
    <string name="month_summary">MONTH SUMMARY</string>
    <string name="stats">STATS</string>
    <string name="totals">TOTALS</string>
    <string name="total_normal_runs">NORMAL</string>
    <string name="totals_challenges">CHALLENGES</string>
    <string name="total_distance">DISTANCE</string>
    <string name="total_time">TIME</string>
    <string name="total_runs">RUNS</string>
    <string name="total_pace">AVG. PACE</string>
    <string name="bring_it_on">BRING IT ON!</string>
    <string name="delete_run">DELETE RUN</string>
    <string name="session_type">SELECT RUN TYPE</string>
    <string name="filter">FILTER BY: </string>

    <string name="challenges_played">PLAYED</string>
    <string name="challenges_complete">COMPLETE</string>
    <string name="challenges_failed">FAILED</string>

    <string name="type_short">SHORT</string>
    <string name="type_long">LONG</string>
    <string name="type_intervals">INTERVALS</string>
    <string name="type_hills">HILLS</string>

    <string name="yea">YOU\'RE ON!</string>
    <string name="wimp">NO WAY!</string>

    <string-array name="month_array">
        <item>ALL</item>
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMBER</item>
    </string-array>


</resources>
