<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:fontFamily="sans-serif-condensed"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/totals"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:layout_gravity="center_horizontal" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/total_runs"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:text="@string/total_runs"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorWhite"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/total_distance"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:text="@string/total_distance"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorWhite"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="132dp"
            android:layout_height="50dp"
            android:layout_marginRight="4dp"
            android:text="@string/total_time"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorWhite"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/colorPrimary"/>
    <Button
        android:id="@+id/button_newRun"
        android:text="@string/add_run"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="right"
        android:textIsSelectable="true"/>

    <ListView
        android:id="@+id/run_list"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:background="@color/colorWhite"/>

    </LinearLayout>
