<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/type_short"
        android:text="@string/type_short"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/type_long"
        android:text="@string/type_long"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/type_intervals"
        android:text="@string/type_intervals"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/type_hills"
        android:text="@string/type_hills"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

</LinearLayout>

    <TextView
        android:id="@+id/challenge_type"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="4dp"/>


    <TextView
        android:id="@+id/challenge_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/challenge_description"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/yea"
            android:text="@string/yea"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/wimp"
            android:text="@string/wimp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>


    </LinearLayout>


</LinearLayout>