<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/points"
            android:text="CHALLENGE POINTS: "
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/points_score"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/played"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginLeft="4dp"
            android:text="@string/challenges_played"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorWhite"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/complete"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorWhite"
            android:padding="5dp"
            android:text="@string/challenges_complete"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/failed"
            android:layout_width="132dp"
            android:layout_height="55dp"
            android:layout_marginRight="4dp"
            android:text="@string/challenges_failed"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorWhite"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:id="@+id/challenge_select"
        android:text="@string/challenge_select_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/button"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/type_short"
            android:layout_gravity="center"
            android:paddingTop="35dp">

            <ImageView
                android:id="@+id/short_button_image"
                android:src="@drawable/icon_short"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/short_button_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/short_button_text"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_short"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/button"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/type_long"
            android:layout_gravity="center"
            android:paddingTop="35dp">

            <ImageView
                android:id="@+id/long_button_image"
                android:src="@drawable/icon_long"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/long_button_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/long_button_text"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_long"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/button"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:id="@+id/type_intervals"
            android:layout_gravity="center"
            android:paddingTop="35dp">

            <ImageView
                android:id="@+id/intervals_button_image"
                android:src="@drawable/icon_intervals"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/intervals_button_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/intervals_button_text"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_intervals"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/button"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:id="@+id/type_hills"
            android:layout_gravity="center"
            android:paddingTop="35dp">

            <ImageView
                android:id="@+id/hills_button_image"
                android:src="@drawable/icon_hills"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/hills_button_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/hills_button_text"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_hills"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>