<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/show_run_title"
        android:text="@string/show_run"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_margin="4dp"
        android:src="@drawable/sample_map"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal|right"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_editRun"
            android:text="@string/edit_run"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="4dp"
            android:layout_gravity="right"/>

        <Button
            android:id="@+id/button_deleteRun"
            android:text="@string/delete_run"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="4dp"
            android:layout_gravity="right"/>
    </LinearLayout>

    <TextView
        android:id="@+id/show_run_date"
        android:text="DATE: "
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="3dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/show_run_distance"
        android:text="DISTANCE: "
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="3dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/show_run_time"
        android:text="TIME: "
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="3dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/show_run_pace"
        android:text="PACE: "
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="3dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/show_run_route"
        android:text="ROUTE: "
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="3dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/show_run_type"
        android:text="TYPE: "
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>








</LinearLayout>